@@ -2,7 +2,7 @@
 *** HYBRID CHANGELOG
 *** Newest entries at top
 
-version hybrid-6-b57   24-Mar-1999
+version hybrid-6-b57   26-Mar-1999
 * integrated ChangeLog with README.hybrid
 * updated Hybrid-team and version.c.SH to reflect the current core team
 * updated INSTALL file to match current install_ircd script
@@ -11,7 +11,9 @@ version hybrid-6-b57   24-Mar-1999
 * changed defaults in config.h for public consumption
 * install_ircd now installs viconf and mkpasswd
 -Rodder
-
+* fixed mtrie_conf.c kline code
+-Dianora
+	
 version hybrid-6-b54   23-Mar-1999
 * rewrote kline code (mtrie_conf.c), no more reverse, its faster now
   and ... works
